--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 
 </head>
 <body>
-<canvas id="playboard"
-        width="400" height="400"
-        style="background: black"        ></canvas>
+<canvas id="playboard" width="400" height="400" style="background: black"        ></canvas>
 <script src="js/segment.js" type="text/javascript" ></script>
+<script src="js/food.js" type="text/javascript"></script>
 <script src="js/snake.js" type="text/javascript"></script>
 <script src="js/game.js" type="text/javascript"></script>
 </body>
